finished 404 and added to login handlebars

--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -24,7 +24,7 @@
 
     <nav>
         <div class="container mt-5" id="nav-welcome">
-          <a href="/home">
+          <a href="#">
             <!-- Logo Image -->
             <img src="../images/Logo-with-text.png" width="200" alt="" class="d-inline-block align-middle mr-2">
           </a>
@@ -37,7 +37,7 @@
     <div class="container fixed-width mt-5">
         <div class="row">
           <div class="col d-flex justify-content-center">
-            <a href="/" class="btn btn-outline-light">Come back home?</a>
+            <a href="/views/welcome.handlebars" class="btn btn-outline-light">Come back home?</a>
           </div>
         </div>
   </body>
