temporary invite placeholder

--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -24,9 +24,9 @@
 
     <nav>
         <div class="container mt-5" id="nav-welcome">
-          <a href="#">
+          <a href="/">
             <!-- Logo Image -->
-            <img src="../images/Logo-with-text.png" width="200" alt="" class="d-inline-block align-middle mr-2">
+            <img src="../images/Logo-with-text.png" width="250" alt="" class="d-inline-block align-middle mr-2">
           </a>
       </nav>
       
