--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -37,7 +37,7 @@
     <div class="container fixed-width mt-5">
         <div class="row">
           <div class="col d-flex justify-content-center">
-            <a href="/views/welcome.handlebars" class="btn btn-outline-light">Come back home?</a>
+            <a href="/" class="btn btn-outline-light">Come back home?</a>
           </div>
         </div>
   </body>
